# nri

./: .gitignore  .gitmodules  99-totalphase.rules  99-usb-serial.rules  Cargo.toml  build.rs  cargo-doc-command  clippy.sh  clippy.toml  doc-regen  net.sh  nri.conf  rerate.sh  run.sh  stop.sh  supervisor.sh
crates/back/comms/: Cargo.toml
crates/back/comms/src/: lib.rs
crates/back/flow/: Cargo.toml
crates/back/flow/src/: lib.rs
crates/back/scribe/: Cargo.toml
crates/back/scribe/src/: lib.rs
crates/drivers/biotac/: Cargo.toml
crates/drivers/biotac/src/: lib.rs
crates/drivers/biotac/src/wrapper/: Makefile  biotac.h  cheetah.rs  mod.rs
crates/drivers/biotac/wrapper/: biotac.rs  cheetah.h
crates/drivers/bluefox/: 2  Cargo.toml  a.out  camera_settings.json  propview.sh  test.cpp  wrapper.rs
crates/drivers/bluefox/mvacquire/: Makefile  README.md
crates/drivers/bluefox/mvacquire/DriverBase/Include/: mvDriverBaseEnums.h  mvVersionInfo.h
crates/drivers/bluefox/mvacquire/apps/: Makefile  Makefile.samp.inc  mknewappl.sh  mvDebugFlags.mvd
crates/drivers/bluefox/mvacquire/apps/Callback/: Callback.cpp  Makefile.inc
crates/drivers/bluefox/mvacquire/apps/Callback_C/: Callback.c
crates/drivers/bluefox/mvacquire/apps/CaptureToUserMemory_C/: CaptureToUserMemory.c
crates/drivers/bluefox/mvacquire/apps/Common/: Info.h  exampleHelper.h  exampleHelper_C.c  exampleHelper_C.h  wxAbstraction.h
crates/drivers/bluefox/mvacquire/apps/ContinuousCaptureAllDevices/: ContinuousCaptureAllDevicesLIN.cpp
crates/drivers/bluefox/mvacquire/apps/ContinuousCapture_C/: ContinuousCapture.c
crates/drivers/bluefox/mvacquire/apps/DigitalIOs/: DigitalIOs.cpp  Makefile
crates/drivers/bluefox/mvacquire/apps/GenICamInterfaceLayout/: GenICamInterfaceLayout.cpp  Makefile
crates/drivers/bluefox/mvacquire/apps/GenericInterfaceLayout/: GenericInterfaceLayout.cpp  Makefile
crates/drivers/bluefox/mvacquire/apps/LiveSnap/: LiveSnap.cpp  Makefile
crates/drivers/bluefox/mvacquire/apps/LiveSnapFLTK/: LiveSnapFLTK.cpp
crates/drivers/bluefox/mvacquire/apps/SingleCapture/: SingleCapture.cpp
crates/drivers/bluefox/mvacquire/apps/SingleCaptureStorage/: SingleCaptureStorage.cpp
crates/drivers/bluefox/mvacquire/apps/SingleSnap/: SingleSnap.cpp
crates/drivers/bluefox/mvacquire/apps/SynchronousCaptureMultipleInputsFLTK/: Makefile.inc  SynchronousCaptureMultipleInputsFLTK.cpp
crates/drivers/bluefox/mvacquire/apps/mvDeviceConfigure/: DeviceConfigureFrame.cpp  DeviceConfigureFrame.h  DeviceHandler.cpp  DeviceHandler.h  DeviceHandlerBlueDevice.cpp  DeviceHandlerBlueDevice.h  DeviceHandlerBlueFOX.cpp  DeviceHandlerHYPERION.cpp  DeviceListCtrl.cpp  LogOutputConfigurationDlg.cpp  LogOutputHandlerDlg.cpp  Makefile
crates/drivers/bluefox/mvacquire/apps/mvPropView/: CaptureThread.cpp  CaptureThread.h  DataConversion.cpp  DataConversion.h  DataGrid.cpp  DevCtrl.cpp  DevCtrl.h  DevData.cpp  DevData.h  DrawingCanvas.cpp  DrawingCanvas.h  HistogramCanvas.cpp  HistogramCanvas.h  HistogramCanvasPixel.cpp  HistogramCanvasPixel.h  HistogramCanvasSpatialNoise.cpp  HistogramCanvasSpatialNoise.h  HistogramCanvasTemporalNoise.cpp  HistogramCanvasTemporalNoise.h  ImageAnalysisPlotControls.cpp  ImageCanvas.cpp  ImageCanvas.h  ImageCanvasCommon.cpp  LineProfileCanvas.cpp  LineProfileCanvas.h  LineProfileCanvasHorizontal.cpp  LineProfileCanvasHorizontal.h  LineProfileCanvasVertical.cpp  LineProfileCanvasVertical.h  Makefile  Makefile.inc  PlotCanvas.cpp  PlotCanvas.h  PlotCanvasImageAnalysis.cpp  PlotCanvasImageAnalysis.h  PlotCanvasInfo.cpp  PlotCanvasInfo.h  PlotCanvasIntensity.cpp  PlotCanvasIntensity.h  PropData.cpp  (+26 more)
crates/drivers/bluefox/mvacquire/apps/testserial/: testserial.cpp
crates/drivers/bluefox/mvacquire/common/: STLHelper.h  auto_array_ptr.h  minmax.h
crates/drivers/bluefox/mvacquire/common/expat/: expatHelper.h
crates/drivers/bluefox/mvacquire/lib/x86_64/: libmvDeviceManager.so.2.12.2  libmvGenTLProducer.so.2.12.2  libmvPropHandling.so.2.12.2  libwxPropGrid.so.2  libwxPropGrid.so.2.12.2  mvGenTLProducer.cti
crates/drivers/bluefox/mvacquire/mvDeviceManager/Include/: mvDeviceManager.h
crates/drivers/bluefox/mvacquire/mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  versionInfo.txt
crates/drivers/bluefox/mvacquire/mvPropHandling/Include/: mvPropHandlingDatatypes.h
crates/drivers/bluefox/mvacquire/runtime/: GenICam_Runtime_gcc40_Linux64_x64_v2_4_0.tgz
crates/drivers/bluefox/mvacquire/runtime/doc/: InstallingTheGenTLAcquireSoftware.html
crates/drivers/bluefox/mvacquire/wxPropGrid/: Makefile
crates/drivers/bluefox/mvacquire/wxPropGrid/Src/: Makefile  Makefile.inc  advprops.cpp  manager.cpp  odcombo.cpp  propgrid.cpp  props.cpp
crates/drivers/bluefox/mvacquire2.17.2/mvGenTL_Acquire_runtime-2.17.2/doc/: InstallingTheGenTLAcquireSoftware.html
crates/drivers/bluefox/mvacquire2.17.2/mvGenTL_Acquire_runtime-2.17.2/lib/: libmvGenTLProducer.so.2.17.2
crates/drivers/bluefox/src/: lib.rs  wrapper.rs
crates/drivers/optoforce/: Cargo.toml  Makefile  adapter.cpp
crates/drivers/optoforce/src/: lib.rs  wrapper.rs
crates/drivers/structure/: Cargo.toml  adapter.cpp  mod.rs  wrapper.rs
crates/drivers/structure/src/: lib.rs  wrapper.rs
crates/drivers/teensy/: Cargo.toml
crates/drivers/teensy/src/: lib.rs
crates/drivers/vicon/: Cargo.toml
crates/drivers/vicon/src/: lib.rs
crates/front/cli/: Cargo.toml
crates/front/cli/src/: lib.rs
crates/front/web/: Cargo.toml
crates/front/web/bootstrap/css/: jquery-ui.min.css
crates/front/web/bootstrap/js/: jquery-ui.min.js  main.js
crates/front/web/flows/: accelcal.flow  biocam.flow  biotac_only.flow~  biotac_only.xflow  calibration.xflow  episode.flow  episode.xflow  optocam.flow  sphere.xflow  stick.xflow  stickcam.flow  sticknovicon.xflow  test.flow  test.xflow  weigh.flow
crates/front/web/src/: config.rs  flow.rs  lib.rs  middleware.rs  ws.rs
crates/front/web/templates/: flows.hbs  frame_bio.hbs  frame_graph.hbs  frame_img.hbs  frame_structure.hbs  frame_teensy.hbs  index.hbs
(+202 files in other folders)
