[package]
name    = "nri"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
build   = "build.rs"
exclude = ["src/web/templates/*", "src/web/bootstrap/*", "src/web/flows/*", "data/*", "keepalive"] # TODO take this out before packaging

[profile.dev]
opt-level = 3
debug     = true

[features]
nightly = []

[dependencies]
# sub-crates
cli         = { path = "crates/front/cli"         }
web         = { path = "crates/front/web"         }
comms       = { path = "crates/back/comms"        }
scribe      = { path = "crates/back/scribe"       }
biotac      = { path = "crates/drivers/biotac"    }
bluefox     = { path = "crates/drivers/bluefox"   }
optoforce   = { path = "crates/drivers/optoforce" }
structure   = { path = "crates/drivers/structure" }
teensy      = { path = "crates/drivers/teensy"    }
utils       = { path = "crates/utils"             }

# external deps
log         = "0.3"
env_logger  = "0.3"
hprof       = "0.1"
chrono      = "0.2"

# needed for examples (TODO remove)
lazy_static = "0.1"
time        = "0.1"
libc        = "0.2"
csv         = "0.14"
lodepng     = "0.5" # TODO migrate to image

