[package]
name    = "nri"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
build   = "build.rs"
exclude = ["src/web/templates/*", "src/web/bootstrap/*", "src/web/flows/*", "data/*", "keepalive"] # TODO take this out before packaging

[profile.release]
#debug = true
lto = true

[features]
default = ["hardware"]
hardware = [
    "biotac/hardware",
    "bluefox/hardware",
    "optoforce/hardware",
    "structure/hardware",
    "teensy/hardware",
    "vicon/hardware",
    ]
nightly = [
    "lazy_static/nightly",
    ]

[dependencies]
# sub-crates
cli         = { path = "crates/front/cli"         }
web         = { path = "crates/front/web"         }
comms       = { path = "crates/back/comms"        }
scribe      = { path = "crates/back/scribe"       }
biotac      = { path = "crates/drivers/biotac"    }
bluefox     = { path = "crates/drivers/bluefox"   }
optoforce   = { path = "crates/drivers/optoforce" }
structure   = { path = "crates/drivers/structure" }
teensy      = { path = "crates/drivers/teensy"    }
vicon       = { path = "crates/drivers/vicon"     }
utils       = { path = "crates/utils"             }

# external deps
guilt-by-association = "0.4"
log         = "0.3"
env_logger  = "0.4"
hprof       = "0.1"
chrono      = "0.3"
error-chain = "0.10"

[dev-dependencies]
# needed for examples (TODO remove)
lazy_static  = "0.2"
time         = "0.1"
libc         = "0.2"
csv          = "0.15"
lodepng      = "0.13" # TODO migrate to image
num_cpus    = "1.3.0"
serde        = "0.9"
serde_json   = "0.9"
serde_derive = "0.9"
macro-attr   = "0.2"
conv         = "0.3"

[build-dependencies]
foreman     = "0.2"

[replace]
"hprof:0.1.3" = { path = "overrides/hprof" }

