[package]
name    = "comms"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[profile.dev]
opt-level = 3
debug     = true

[dependencies]
utils                = { path = "../../utils" }
guilt-by-association = "0.2"
hprof                = "0.1"
time                 = "0.1"
libc                 = "0.2"

