[package]
name    = "comms"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
utils                = { path = "../../utils"  }
guilt-by-association = "0.4"
hprof                = "0.1"
time                 = "0.1"
libc                 = "0.2"
error-chain          = "0.10"

