[package]
name    = "flow"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies]
utils                = { path = "../../utils"          }
comms                = { path = "../comms"             }
teensy               = { path = "../../drivers/teensy" }
lazy_static          = "0.2"
chrono               = "0.3"
uuid                 = { version = "0.2", features = ["v4"] }
rustc-serialize      = "0.3" # TODO migrate to serde
error-chain          = "0.7"

