[package]
name    = "flow"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies]
utils                = { path = "../../utils"          }
comms                = { path = "../comms"             }
teensy               = { path = "../../drivers/teensy" }
lazy_static          = "0.2"
chrono               = { version = "0.4", features = ["serde"] }
uuid                 = { version = "0.5", features = ["v4", "serde"] }
serde                = "1"
serde_derive         = "1"
error-chain          = "0.10"

