[package]
name    = "biotac"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
comms                = { path = "../../back/comms"        }
scribe               = { path = "../../back/scribe"       }
utils                = { path = "../../utils"             }
guilt-by-association = "0.4"
serde                = "1"
serde_derive         = "1"
serde_json           = "1"
time                 = "0.1"
libc                 = "0.2"

