[package]
name    = "bluefox"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[profile.release]
debug = true

[features]
nightly = [
    "comms/nightly",
    "scribe/nightly",
    "utils/nightly",
    ]

[dependencies]
comms                = { path = "../../back/comms"        }
scribe               = { path = "../../back/scribe"       }
utils                = { path = "../../utils"             }
guilt-by-association = "0.2"
macro-attr           = "0.2"
conv                 = "0.3"
time                 = "0.1"
libc                 = "0.2"
image                = "0.12"
rustc-serialize      = "0.3" # TODO migrate to serde
error-chain          = "0.7"

