[package]
name    = "bluefox"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
comms                = { path = "../../back/comms"         }
scribe               = { path = "../../back/scribe"        }
utils                = { path = "../../utils"              }
bluefox-sys          = { path = "../../../sys/bluefox-sys" }
lazy_static          = "0.2"
guilt-by-association = "0.4"
time                 = "0.1"
libc                 = "0.2"
image                = "0.12"
rustc-serialize      = "0.3" # TODO migrate to serde
serde                = "0.9"
serde_json           = "0.9"
serde_derive         = "0.9"
error-chain          = "0.10"

