[package]
name    = "optoforce"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[profile.release]
debug = true
# TODO build script

[features]
nightly = [
    "comms/nightly",
    "scribe/nightly",
    "utils/nightly",
    ]

[dependencies]
comms                = { path = "../../back/comms"        }
scribe               = { path = "../../back/scribe"       }
utils                = { path = "../../utils"             }
guilt-by-association = "0.2"
time                 = "0.1"
libc                 = "0.2"

