[package]
name    = "optoforce"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
comms                = { path = "../../back/comms"        }
scribe               = { path = "../../back/scribe"       }
utils                = { path = "../../utils"             }
guilt-by-association = "0.4"
time                 = "0.1"
libc                 = "0.2"
rustc-serialize      = "0.3" # TODO migrate to serde
gnuplot              = "0.0.21"

