[package]
name    = "structure"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
# TODO build script

[profile.release]
debug = true

[features]
nightly = [
    "comms/nightly",
    "scribe/nightly",
    "utils/nightly",
    ]

[dependencies]
comms                = { path = "../../back/comms"        }
scribe               = { path = "../../back/scribe"       }
utils                = { path = "../../utils"             }
guilt-by-association = "0.2"
custom_derive        = "0.1"
conv                 = "0.3"
time                 = "0.1"
libc                 = "0.2"
rustc-serialize      = "0.3" # TODO migrate to serde
image                = "0.4"

