[package]
name    = "teensy"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
comms                = { path = "../../back/comms"  }
scribe               = { path = "../../back/scribe" }
utils                = { path = "../../utils"       }
guilt-by-association = "0.4"
macro-attr           = "0.2"
conv                 = "0.3"
time                 = "0.1"
serial               = "0.3"
rustc-serialize      = "0.3" # TODO migrate to serde
serde                = "0.9"
serde_derive         = "0.9"
serde_json           = "0.9"
gnuplot              = "0.0.22"

