[package]
name    = "teensy"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[features]
hardware = []

[dependencies]
comms                = { path = "../../back/comms"  }
scribe               = { path = "../../back/scribe" }
utils                = { path = "../../utils"       }
guilt-by-association = "0.4"
unborrow             = "0.3"
macro-attr           = "0.2"
conv                 = "0.3"
time                 = "0.1"
serial               = "0.4"
rustc-serialize      = "0.3" # TODO migrate to serde
serde                = "1"
serde_derive         = "1"
serde_json           = "1"
gnuplot              = "0.0.22"
strum                = "0.6"
strum_macros         = "0.6"

