[package]
name    = "vicon"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[profile.release]
debug = true

[features]
hardware = []
nightly = [
    "comms/nightly",
    "scribe/nightly",
    "utils/nightly",
    ]

[dependencies]
comms                = { path = "../../back/comms"  }
scribe               = { path = "../../back/scribe" }
utils                = { path = "../../utils"       }
guilt-by-association = "0.4"
time                 = "0.1"

