[package]
name    = "cli"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[profile.release]
debug = true

[features]
nightly = [
    "utils/nightly",
    "comms/nightly",
    "teensy/nightly",
    ]

[dependencies]
utils                = { path = "../../utils"          }
comms                = { path = "../../back/comms"     }
teensy               = { path = "../../drivers/teensy" }
guilt-by-association = "0.2"

chrono               = "0.2"

