[package]
name    = "cli"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies]
utils                = { path = "../../utils"          }
comms                = { path = "../../back/comms"     }
flow                 = { path = "../../back/flow"      }
scribe               = { path = "../../back/scribe"    }
teensy               = { path = "../../drivers/teensy" }
guilt-by-association = "0.4"

chrono               = "0.3"
shlex                = "0.1"

