[package]
name    = "web"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies] 
comms                = { path = "../../back/comms"     }
utils                = { path = "../../utils"          }
flow                 = { path = "../../back/flow"      }
teensy               = { path = "../../drivers/teensy" }
guilt-by-association = "0.4"
lazy_static          = "0.2"
log                  = "0.3"
regex                = "0.2"
error-chain          = "0.10"

# iron deps
iron                 = "0.5"
handlebars-iron      = "0.23"
handlebars           = "0.25"
staticfile           = { version = "0.4", default-features = false }
mount                = "0.3"
hyper                = "0.10"
router               = "0.5"
urlencoded           = "0.5"
url                  = "1"
rustc-serialize      = "0.3" # TODO migrate to serde
websocket            = "0.19"
