[package]
name    = "web"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies] 
comms                = { path = "../../back/comms"     }
utils                = { path = "../../utils"          }
flow                 = { path = "../../back/flow"      }
teensy               = { path = "../../drivers/teensy" }
guilt-by-association = "0.4"
lazy_static          = "0.2"
log                  = "0.3"
time                 = "0.1"
regex                = "0.2"
error-chain          = "0.10"
uuid                 = { version = "0.5", features = ["v4"] }
serde                = "1"
serde_json           = "1"
serde_derive         = "1"

# iron deps
iron                 = "0.5"
handlebars-iron      = "0.25"
handlebars           = "0.29"
staticfile           = { version = "0.4", default-features = false }
mount                = "0.3"
hyper                = "0.10"
router               = "0.5"
urlencoded           = "0.5"
url                  = "1"
websocket            = "0.20"
